_kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-sync
  namespace: devops
  labels:
    cluster: sample-sync
spec:
  ports:
    - name: prometheus-jmx
      port: 8079
    - name: web
      port: 8080
    - name: cluster
      port: 8082
    - name: misc
      port: 9001
  selector:
    cluster: sample-sync
---

kind: Service
apiVersion: v1
metadata:
  name: sample-sync-headless
  namespace: devops
spec:
  clusterIP: None
  selector:
    cluster: sample-sync
  ports:
    - protocol: TCP
      port: 8081
