_kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-sync
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
  - host: sample-sync.ds.aws.devops.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-sync
          servicePort: 8080
